--- a/Week06/2024_dsga1007_lect06 - Copy.ipynb
+++ b/Week06/2024_dsga1007_lect06 - Copy.ipynb
@@ -1443,7 +1443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ds",
    "language": "python",
    "name": "python3"
   },
